--- a/src/components/grid-card/GridCard.scss
+++ b/src/components/grid-card/GridCard.scss
@@ -11,6 +11,7 @@
 						transform: scale(1.3);
 					}
 				}
+
 			}
 		}
 
@@ -20,8 +21,9 @@
 	}
 
 	.content-right {
-		width: 77%;
+		width: 74%;
 		float: right;
+		margin-left: 10px;
 
 		ul {
 			overflow: visible;
